--- a/index.html
+++ b/index.html
@@ -1,26 +1,58 @@
 <!DOCTYPE html>
-   <html lang="en-US">
+<html lang="en">
     <head>
-        <title>Eumaios Portfolio</title>
-        <meta charset="UTF-8">
+       <meta charset="UTF=8">
+       <title>Portfolio</title>
     </head>
     <body>
-        <h1>Welcome to my portfolio</h1>
-        <hr />
-        <h2>Here I would like to show you my projects that I have done so far in order from latest to first:</h2>
-        <a href="./public/birthday-invite.html">Birthday Invite Project</a> <br /> <br />
-        <img src="./assets/images/birthday-invite.png" height=200>
-        <hr />
-        <a href="./public/movie-ranking.html">Movie Ranking Project</a> <br /> <br />
-        <img src="./assets/images/movie-ranking.png" height=200>
-        <hr />
-        <p>So far these are the only projects that I have done so far, I will work on more, and put them up here. Thank you very much for 
-            getting so far, looking at my project, hope we can work together some time in the future if not now! <br />
-            Have a great day!
-        </p>
-        <hr />
-        <a href="./public/contact.html">Contact</a> <a href="./public/about.html">About Me</a>
-
-    </body>
-
-   </html>
+       <h1>Incze Ádám</h1>
+       <img src="./images/fokep.jpg" height="130"/>
+       <hr />
+       <h2>SUMMARY</h2>
+       <p>My name is Ádám Incze, I was born in 2001.04.24 in Baraolt, Romania. I grew up to be an introverted guy, I don't have a lot of
+         friends, but those that I have are all very close to me. I constantly try to evolve, be better than I was yesterday in any way,
+         love pushing myself to extreme lengths mentally and physically. I started learning the making of websites (front- and backend)
+         to make some side money for myself.
+       </p>
+       <hr />
+       <h2>EDUCATION</h2>
+       <ul>
+         <li><a href="https://barotiszabodavid.ro/index.php/hu/">Baróti Szabó Dávid Technológiai Liceum</a> - Math-Info (2016-2020)</li>
+         <li><a href="https://barotiszabodavid.ro/index.php/hu/">Baróti Szabó Dávid Technológiai Liceum</a> - Turisztika szak (2015-2016)</li>
+         <li><a href="http://gaalmozes.ro/F%C5%91oldal.phpGaál">Mózes Általános Iskola (2008-2015)</a></li>
+       </ul>
+       <hr />
+       <h2>WORK EXPERIENCE</h2>
+       <ul>
+         <li><h3>Customer Service Representative - Vigor Life Kft. (Hungary)</h3></li>
+         <p>September 2022 - Current</p>
+         <p>I worked in the depozit at the company before but in 2022 september I became a customer service representative 
+            in romanian language and later on I also worked on the hungarian site as a customer service representative. I had to do 
+            the following things:
+            <ul>
+               <li>helping/ answearing customer via phone and email</li>
+               <li>issuing/ modifying/ cancelling an invoice</li>
+               <li>uploading/ modifying items on our websites or eMAG</li> 
+            </ul><br />
+            I also became a user level in <a href="https://tharanisugyvitel.hu/">Tharanis</a>, <a href="https://unas.hu/">Unas</a> and in eMAG.
+         </p>
+       </ul>
+       <hr />
+       <h2>SKILLS</h2>
+       <ul>
+         <li>Customer Service: &#9733;&#9733;&#9733;&#9733;&#9734;</li>
+         <li>Microsoft Office: &#9733;&#9733;&#9733;&#9734;&#9734;</li>
+         <li>Organization: &#9733;&#9733;&#9733;&#9733;&#9734;</li>
+         <li>Teamwork: &#9733;&#9733;&#9734;&#9734;&#9734;</li>
+       </ul>
+       <hr />
+       <h2>OTHER</h2>
+       <ul>
+         <li><a href="./public/about.html">About Me</a></li>
+         <li><a href="./public/contact.html">Contact</a></li>
+       </ul>
+       <hr />
+        <footer>
+         <p style="text-align:center">&copy; Ádám Incze, all rights reserved.</p>
+        </footer>
+      </body>
