Gaák Mózes javítás index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <ul>
          <li><a href="https://barotiszabodavid.ro/index.php/hu/">Baróti Szabó Dávid Technológiai Liceum</a> - Math-Info (2016-2020)</li>
          <li><a href="https://barotiszabodavid.ro/index.php/hu/">Baróti Szabó Dávid Technológiai Liceum</a> - Turisztika szak (2015-2016)</li>
-         <li><a href="http://gaalmozes.ro/F%C5%91oldal.phpGaál">Mózes Általános Iskola (2008-2015)</a></li>
+         <li><a href="https://gaalmozes.ro/">Mózes Általános Iskola (2008-2015)</a></li>
        </ul>
        <hr />
        <h2>WORK EXPERIENCE</h2>
