Fokep to assets folder index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        <h1>Incze Ádám</h1>
-       <img src="./images/fokep.jpg" height="130"/>
+       <img src=".assets/images/fokep.jpg" height="130"/>
        <hr />
        <h2>SUMMARY</h2>
        <p>My name is Ádám Incze, I was born in 2001.04.24 in Baraolt, Romania. I grew up to be an introverted guy, I don't have a lot of
